--- a/core/views/admin/search.html
+++ b/core/views/admin/search.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=1200" />
 		<link rel="shortcut icon" href="/public/images/favicon.png">
 		<link rel='stylesheet' href='/public/bower_components/bootstrap/dist/css/bootstrap.css'/>
-		<link rel="stylesheet" href="/public/stylesheets/font-awesome.css">
+		<link rel="stylesheet" href="/public/bower_components/components-font-awesome/css/font-awesome.min.css">
 		<link rel="stylesheet" href="/public/stylesheets/main.css">
 		<script src="/public/bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="/public/bower_components/jquery-validation/dist/jquery.validate.min.js"></script>
@@ -32,8 +32,6 @@
 			</div>
 			<div class="push"></div>
 		</div><!--wrapper -->
-		<div class="index-footer">
-			<div class="copyright text-center">Copyright ©2016 无锡法院</div>
-		</div>
+		<% include ./include/footer.html %>
 	</body>
 </html>
