--- a/core/views/admin/include/footer.html
+++ b/core/views/admin/include/footer.html
@@ -1,3 +1,3 @@
-<div class="footer">
-    Copyright ©2016 无锡法院
+<div class="index-footer">
+    <div class="copyright text-center">Copyright ©2016 无锡法院</div>
 </div>
