--- a/core/views/admin/include/header.html
+++ b/core/views/admin/include/header.html
@@ -8,7 +8,7 @@
             </div>
             <div class="line-gap"></div>
             <a href="/admin/logout">
-                <i class="icon-off"></i>
+                <i class="fa fa-power-off"></i>
             </a>
         </div>
 
