--- a/core/views/admin/include/menu.html
+++ b/core/views/admin/include/menu.html
@@ -10,19 +10,19 @@ var active = '系统设置'
     <ul>
         <%
             for(let i = 0; i< menus.length; i ++){
-            let menuObj = menus[i];
-            let currLevel = menuObj.get('nlevel')
+                let menuObj = menus[i];
+                let currLevel = menuObj.nlevel
         %>
-        <%if(menuObj.get('nlevel') == 0){%>
-            <%if(menuObj.get('restype') == 1){%>
-                <li <%if(active == menuObj.get('name')){%>class="active"<%}%>>
+        <%if(menuObj.nlevel == 0){%>
+            <%if(menuObj.restype == 1){%>
+                <li <%if(active == menuObj.name){%>class="active"<%}%>>
                     <div class="nav-title">
-                        <span class="pull-right icon-dropdown"></span>
+                        <span class="fa  fa-th-list"></span>
                         <div class="desktop-chart">
                             <i class="icon-desktop"></i>
                             <i class="icon-bar-chart"></i>
                         </div>
-                        <%=menuObj.get('name')%>
+                        <%=menuObj.name%>
                     </div>
 
                     <ul>
@@ -31,8 +31,8 @@ var active = '系统设置'
                             let menuObj = menus[j];
                         %>
                             <%if(menuObj.get('nlevel') == currLevel+1) {%>
-                                <li><a href="<%if(menuObj.get('url')){%><%=menuObj.get('url')%><%}else{%>#<%}%>"><%=menuObj.get('name')%></a></li>
-                            <%}else if(menuObj.get('nlevel') == currLevel){
+                                <li><a href="<%if(menuObj.get('url')){%><%=menuObj.get('url')%><%}else{%>#<%}%>"><%=menuObj.name%></a></li>
+                            <%}else if(menuObj.nlevel == currLevel){
                                 i = j-1
                                 break;
                             }%>
