--- a/core/views/admin/login.html
+++ b/core/views/admin/login.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=1200">
         <link rel="shortcut icon" href="/public/images/favicon.png">
 		<link rel='stylesheet' href='/public/bower_components/bootstrap/dist/css/bootstrap.css'/>
-        <link rel="stylesheet" href="/public/stylesheets/font-awesome.css">
+		<link rel="stylesheet" href="/public/bower_components/components-font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="/public/stylesheets/main.css">
 		<script src="/public/bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="/public/bower_components/jquery-validation/dist/jquery.validate.min.js"></script>
@@ -23,7 +23,7 @@
 		</div>			
 		<div class="login-bg">
 			<div class="container">
-				<form id="adminLoginForm" name="adminLoginForm" method="post" action="/login">
+				<form id="adminLoginForm" name="adminLoginForm" method="post" action="?">
 					<div class="login-box">
 						<h2 class="login-title">
 							用户登录 <small>User Login</small>
@@ -31,12 +31,12 @@
 						<br>
 						<div class="login-input">
 							<input class="input-block" type="text" name="username" id="username" placeholder="请输入用户名">
-							<i class="icon icon-user"></i>
+							<i class="icon fa fa-user"></i>
 						</div>
 						<br>
 						<div class="login-input">
 							<input class="input-block" type="password" name="password" id="password" placeholder="请输入密码">
-							<i class="icon icon-unlock-alt"></i>
+							<i class="icon fa fa-key"></i>
 						</div>
 						<br>
 						<p>
@@ -77,7 +77,7 @@
 						success: function(data) {
 							if(data.error){
 								//alert(data.error)
-								tipDialog.open({
+								myDialog.tipDialog.open({
 									level:3,
 									body:data.error,
 									title:'系统提示'
