--- a/core/views/admin/sys/res.html
+++ b/core/views/admin/sys/res.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=1200">
 		<link rel="shortcut icon" href="/public/images/favicon.png">
 		<link rel='stylesheet' href='/public/bower_components/bootstrap/dist/css/bootstrap.css'/>
-		<link rel="stylesheet" href="/public/stylesheets/font-awesome.css">
+		<link rel="stylesheet" href="/public/bower_components/components-font-awesome/css/font-awesome.min.css">
 		<link rel="stylesheet" href="/public/stylesheets/main.css">
 		<script src="/public/bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="/public/bower_components/jquery-validation/dist/jquery.validate.min.js"></script>
@@ -22,14 +22,14 @@
 				<% include ../include/menu.html %>
 				<div class="search-box gap-lr text-right">
 					<input type="text" placeholder="模糊查询"> 
-					<a href="list.html" class="btn">搜索</a>
+					<a href="list.html" class="btn btn-primary">搜索</a>
 				</div>
 				<ul class="nav-bar">
 					<li class="active"><a>资源管理</a></li>
 				</ul>
 				<div class="gap">
-					<button class="btn btn-primary pull-right" onclick='addMenu()' title="添加">
-						<span class="icon-plus"></span>
+					<button class="btn btn-primary pull-right"  data-toggle="modal" data-target="#addModal" title="添加">
+						<span class="fa fa-plus"></span>
 					</button>
 
 					<br>
@@ -47,14 +47,23 @@
 						</tr>
 						</thead>
 						<tbody>
-							<%for(let i = 0;i < menus.length; i++){
-								menuObj = menus[i];
+							<%
+
+							for(let i = 0;i < allRes.length; i++){
+								let menuObj = allRes[i];
+								let currLevel = menuObj.get('nlevel')
+								let restype = menuObj.get('restype')
+								let indent = currLevel * 25
 							%>
-							<tr id="" pId="">
-								<td><%=menuObj.get('name')%></td>
+							<tr id="">
+								<%if(restype == 1){%>
+									<td><div style="padding-left:<%=indent%>px "></div><span class="glyphicon glyphicon-triangle-right"></span><%=menuObj.get('name')%></td>
+								<%}else{%>
+									<td><div style="padding-left:<%=indent%>px "><%=menuObj.get('name')%></td>
+								<%}%>
 								<td><%=menuObj.get('order')%></td>
 								<td>
-									<%=menuObj.get('restype')%>
+									<%=menuObj.get('restype')== 1 ? '目录':(menuObj.get('restype')== 2?'菜单':'功能')%>
 								</td>
 								<td></td>
 								<td><%=menuObj.get('url')%></td>
@@ -62,34 +71,170 @@
 								<td><%=menuObj.get('desc')%></td>
 								<td>
 									<button class="btn btn-primary" title="编辑">
-										<i class="icon-edit"></i>
+										<i class="fa fa-edit"></i>
 									</button>
 									<button type="button" class="btn btn-danger" title="删除">
-										<i class=" icon-trash"></i>
+										<i class="fa fa-trash"></i>
 									</button>
 								</td>
 							</tr>
 							<%}%>
 						</tbody>
 					</table>
-					<div class="pagination">
-						<ul>
-			                <li class="disable"><a href="#">« 上一页</a></li>
-			                <li class="active"><a href="#">1</a></li>
-			                <li><a href="#">2</a></li>
-			                <li><a href="#">3</a></li>
-			                <li><a href="#">4</a></li>
-			                <li><a href="#">...</a></li>
-			                <li><a href="#">10</a></li>
-			                <li><a href="#">下一页 »</a></li>
-			            </ul>
-					</div>
+
 				</div>
 			</div>
 			<div class="push"></div>
 		</div>
-		<div class="index-footer">
-			<div class="copyright text-center">Copyright ©2016 无锡法院</div>
-		</div>
+		<% include ../include/footer.html %>
+		<div class="modal fade" role="dialog" id="addModal" data-backdrop="static" aria-labelledby="gridSystemModalLabel">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="gridSystemModalLabel">添加资源</h4>
+					</div>
+					<form class="form-horizontal"  method="post" id="addResForm" name="addResForm" action="?">
+						<div class="modal-body">
+								<div class="form-group">
+									<label for="res_name" class="col-sm-2 control-label">资源名称</label>
+									<div class="col-sm-10">
+										<input type="text" class="form-control" id="res_name" name="res_name" placeholder="资源名称">
+									</div>
+								</div>
+								<div class="form-group">
+									<label for="res_pid" class="col-sm-2 control-label">父级资源</label>
+									<div class="col-sm-10">
+										<select class="form-control" id="res_pid" name="res_pid">
+											<option value="0">--顶级--</option>
+											<%
+												for(let i = 0;i < allRes.length; i++){
+												let menuObj = allRes[i];
+												let currLevel = menuObj.get('nlevel')
+												let restype = menuObj.get('restype')
+												let indent = currLevel * 4
+											%>
+											<option value="<%=menuObj.get('id')%>">
+												<%for(let i = 0;i < indent; i++){%>&nbsp;<%}%><%=menuObj.get('name')%>
+											</option>
+
+											<%}%>
+										</select>
+									</div>
+								</div>
+								<div class="form-group">
+									<label for="res_url" class="col-sm-2 control-label">资源URL</label>
+									<div class="col-sm-10">
+										<input type="text" class="form-control" id="res_url" name="res_url" placeholder="资源URL">
+									</div>
+								</div>
+								<div class="form-group">
+									<label for="res_type" class="col-sm-2 control-label">资源类型</label>
+									<div class="col-sm-10">
+										<select class="form-control" id="res_type" name="res_type">
+											<option value="1">目录</option>
+											<option value="2">菜单</option>
+											<option value="3">功能/页面</option>
+										</select>
+									</div>
+								</div>
+								<div class="form-group">
+									<label for="res_desc" class="col-sm-2 control-label">资源描述</label>
+									<div class="col-sm-10">
+										<input type="text" class="form-control" id="res_desc" name="res_desc" placeholder="资源名称">
+									</div>
+								</div>
+								<div class="form-group">
+									<label for="res_order" class="col-sm-2 control-label">资源排序</label>
+									<div class="col-sm-10">
+										<input type="text" class="form-control" id="res_order" name="res_order" placeholder="资源排序">
+									</div>
+								</div>
+								<div class="form-group">
+									<label for="res_icon" class="col-sm-2 control-label">资源图标</label>
+									<div class="col-sm-10">
+										<input type="text" class="form-control" id="res_icon" name="res_icon" placeholder="请输入Font Awesome中的图标名称">
+									</div>
+								</div>
+
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+							<button type="button" class="btn btn-primary" onclick="$('#addResForm').submit()">添加</button>
+						</div>
+					</form>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal-dialog -->
+		</div><!-- /.modal -->
+		<script>
+			$(function(){
+
+				$("#addResForm").validate({
+					rules: {
+						res_name: {
+							required: true
+						},
+						res_pid: {
+							required: true
+						},
+						res_url: {
+							required: true
+						},
+						res_type: {
+							required: true
+						},
+						res_desc: {
+							required: false
+						},
+						res_order: {
+							required: true
+							/*remote:{
+								type:"GET",
+								dataType: 'json',
+								url:"/admin/sys/res/checkSameLevelOrder",
+								data:{
+									res_pid:function(){return $("#res_pid").val();}
+								}
+							}*/
+						},
+						res_icon: {
+							required: false
+						}
+					},
+					messages:{
+						res_order:{
+							//remote:'同一级别下的资源序号不能相同'
+						}
+					},
+					submitHandler:function(form){
+						$.ajax({
+							type: "POST",
+							url:'/admin/sys/res/add',
+							data:{
+								res_name:$('#res_name').val(),
+								res_pid:$('#res_pid').val(),
+								res_url:$('#res_url').val(),
+								res_type:$('#res_type').val(),
+								res_desc:$('#res_desc').val(),
+								res_order:$('#res_order').val(),
+								res_icon:$('#res_icon').val()
+							},
+							success: function(data) {
+								if(data.error){
+									//alert(data.error)
+									myDialog.tipDialog.open({
+										level:3,
+										body:data.error,
+										title:'系统提示'
+									})
+								}else{
+									window.location.href='/admin/sys/rec'
+								}
+							}
+						})
+					}
+				});
+			})
+		</script>
 	</body>
 </html>
