--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -438,7 +438,7 @@ html, body {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#59aae9', endColorstr='#2b8ad4',GradientType=0 ); }
 
 .index-header {
-  background: url(../img/header-bg.png) no-repeat left center;
+  background: url(/public/images/header-bg.png) no-repeat left center;
   padding: 16px 40px;
   color: #fff;
   position: relative; }
@@ -449,7 +449,7 @@ html, body {
   color: #fff; }
 
 .index-header .line-gap {
-  background: url(../img/line.png) no-repeat center center;
+  background: url(/public/images/line.png) no-repeat center center;
   width: 80px;
   height: 60px; }
 
@@ -559,4 +559,7 @@ html, body {
 #chart {
   padding: 20px; }
 
+.error{
+  font-size: 12px; color: red;
+}
 /*# sourceMappingURL=main.css.map */
