--- a/core/views/admin/login.html
+++ b/core/views/admin/login.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="/public/bower_components/components-font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="/public/stylesheets/main.css">
 		<script src="/public/bower_components/jquery/dist/jquery.min.js"></script>
+		<script src="/public/javascripts/jQuery.md5.js"></script>
 		<script src="/public/bower_components/jquery-validation/dist/jquery.validate.min.js"></script>
 		<script src="/public/bower_components/jquery-validation/dist/additional-methods.min.js"></script>
 		<script src="/public/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -36,8 +37,15 @@
 						<br>
 						<div class="login-input">
 							<input class="input-block" type="password" name="password" id="password" placeholder="请输入密码">
-							<i class="icon fa fa-key"></i>
+							<i class="icon fa fa-unlock-alt"></i>
 						</div>
+						<div style="margin-top: 20px;">
+							<div style="float: left">
+								<img style="border: 1px solid #cccccc; height: 40px;" onclick="refreshVerifyCode(this)" src="<%=verifyCode%>">
+							</div>
+							<input minlength="4" maxlength="4"  style="width: 150px; float: right" type="text" name="verifyCode" id="verifyCode" placeholder="输入验证码">
+						</div>
+						<div style="clear: both"></div>
 						<br>
 						<p>
 							<input type="checkbox"> 记住密码
@@ -53,17 +61,36 @@
 			<div class="copyright text-center">Copyright ©2016 无锡法院</div>
 		</div>
 	<script>
+		function refreshVerifyCode(t){
+			$.ajax({
+				type: "GET",
+				url:'/admin/refreshVerifyCode',
+				data:{
+				},
+				success: function(data) {
+					if(data.error){
+					}else{
+						t.src=data.verifyCode
+					}
+				}
+			})
+		}
 		$(function(){
 
 			$("#adminLoginForm").validate({
 				rules: {
 					username: {
 						required: true,
-						minlength: 5
+						minlength: 4
 					},
 					password: {
 						required: true,
 						minlength: 5
+					},
+					verifyCode:{
+						required:true,
+						minlength: 4,
+						maxlength: 4
 					}
 				},
 				submitHandler:function(form){
@@ -72,7 +99,8 @@
 						url:'/admin/login',
 						data:{
 							username:$('#username').val(),
-							password:$('#password').val()
+							verifyCode:$('#verifyCode').val(),
+							password:$.md5($('#password').val())
 						},
 						success: function(data) {
 							if(data.error){
@@ -91,5 +119,5 @@
 			});
 		})
 	</script>
-	</body> 
+	</body>
 </html>
