--- a/core/views/admin/sys/res.html
+++ b/core/views/admin/sys/res.html
@@ -14,6 +14,9 @@
 		<script src="/public/bower_components/jquery-validation/dist/additional-methods.min.js"></script>
 		<script src="/public/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="/public/javascripts/common.js"></script>
+
+		<link href="/public/bower_components/jquery-treetable/css/jquery.treetable.css" rel="stylesheet" type="text/css" />
+		<script src="/public/bower_components/jquery-treetable/jquery.treetable.js"></script>
 	</head>
 	<body>
 		<div class="wrapper">
@@ -28,7 +31,7 @@
 					<li class="active"><a>资源管理</a></li>
 				</ul>
 				<div class="gap">
-					<button class="btn btn-primary pull-right"  data-toggle="modal" data-target="#addModal" title="添加">
+					<button class="btn btn-primary pull-right"  onclick="editRes('add')" title="添加">
 						<span class="fa fa-plus"></span>
 					</button>
 
@@ -55,25 +58,21 @@
 								let restype = menuObj.get('restype')
 								let indent = currLevel * 25
 							%>
-							<tr id="">
-								<%if(restype == 1){%>
-									<td><div style="padding-left:<%=indent%>px "></div><span class="glyphicon glyphicon-triangle-right"></span><%=menuObj.get('name')%></td>
-								<%}else{%>
-									<td><div style="padding-left:<%=indent%>px "><%=menuObj.get('name')%></td>
-								<%}%>
+							<tr data-tt-id="<%=menuObj.id%>"  data-tt-parent-id="<%=menuObj.pid%>" >
+								<td><%=menuObj.get('name')%></td>
 								<td><%=menuObj.get('order')%></td>
 								<td>
-									<%=menuObj.get('restype')== 1 ? '目录':(menuObj.get('restype')== 2?'菜单':'功能')%>
+									<%=menuObj.get('restype')== 1 ? '目录':(menuObj.get('restype')== 2?'菜单':'功能/页面')%>
 								</td>
-								<td></td>
+								<td><%=menuObj.reskey%></td>
 								<td><%=menuObj.get('url')%></td>
-								<td><%=menuObj.get('icon')%></td>
+								<td><i class="fa fa-<%=menuObj.get('icon')%>"></i></td>
 								<td><%=menuObj.get('desc')%></td>
 								<td>
-									<button class="btn btn-primary" title="编辑">
+									<button class="btn btn-primary" onclick="editRes('edit','<%=menuObj.id%>')" title="编辑">
 										<i class="fa fa-edit"></i>
 									</button>
-									<button type="button" class="btn btn-danger" title="删除">
+									<button type="button" class="btn btn-danger"  onclick="delRes('<%=menuObj.id%>')" title="删除">
 										<i class="fa fa-trash"></i>
 									</button>
 								</td>
@@ -95,6 +94,7 @@
 						<h4 class="modal-title" id="gridSystemModalLabel">添加资源</h4>
 					</div>
 					<form class="form-horizontal"  method="post" id="addResForm" name="addResForm" action="?">
+						<input type="hidden" name="resId">
 						<div class="modal-body">
 								<div class="form-group">
 									<label for="res_name" class="col-sm-2 control-label">资源名称</label>
@@ -160,19 +160,96 @@
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-							<button type="button" class="btn btn-primary" onclick="$('#addResForm').submit()">添加</button>
+							<button type="button" class="btn btn-primary" onclick="$('#addResForm').submit()">保存</button>
 						</div>
 					</form>
 				</div><!-- /.modal-content -->
 			</div><!-- /.modal-dialog -->
 		</div><!-- /.modal -->
 		<script>
-			$(function(){
 
+			function editRes(operType,resId){
+				$('#addResForm')[0].reset()
+				if(operType == 'add'){
+					$('#addModal .modal-title').text('添加资源')
+					$('#addModal').modal()
+				}else{
+					$('#addModal .modal-title').text('编辑资源')
+					$('input[name="resId"]').val(resId)
+					$.ajax({
+						type: "GET",
+						url:'/admin/sys/res/resDetail',
+						data:{
+							resId:resId
+						},
+						success: function(data) {
+							if(data.error){
+								//alert(data.error)
+								myDialog.tipDialog.open({
+									level:3,
+									body:data.error,
+									title:'系统提示'
+								})
+							}else{
+								$('#addModal #res_name').val(data.name)
+								$('#addModal #res_pid').val(data.pid)
+								$('#addModal #res_url').val(data.url)
+								$('#addModal #res_type').val(data.restype)
+								$('#addModal #res_desc').val(data.desc)
+								$('#addModal #res_order').val(data.order)
+								$('#addModal #res_icon').val(data.icon)
+								$('#addModal').modal()
+							}
+						}
+					})
+				}
+			}
+			function delRes(resId){
+				myDialog.confirmDialog.open({
+					title:'操作提示',
+					body:'你确定要删除该功能吗?',
+					confirmCallback:function(){
+						$.ajax({
+							type: "GET",
+							url:'/admin/sys/res/del',
+							data:{
+								resId:resId
+							},
+							success: function(data) {
+								if(data.error){
+									//alert(data.error)
+									myDialog.tipDialog.open({
+										level:3,
+										body:data.error,
+										title:'系统提示'
+									})
+								}else{
+									window.location.href='/admin/sys/res'
+								}
+							}
+						})
+					}
+				});
+			}
+			$(function(){
+				$("#menuTable").treetable({
+					expandable: true ,
+					clickableNodeNames:true,
+					initialState: "expanded"
+				});
 				$("#addResForm").validate({
 					rules: {
 						res_name: {
-							required: true
+							required: true,
+							remote:{
+								 type:"GET",
+								 dataType: 'json',
+								 url:"/admin/sys/res/checkSameNameInRes",
+								 data:{
+								 	res_pid:function(){return $("#res_pid").val();},
+								 	resId:function(){return $('input[name="resId"]').val()}
+								 }
+							 }
 						},
 						res_pid: {
 							required: true
@@ -204,21 +281,34 @@
 					messages:{
 						res_order:{
 							//remote:'同一级别下的资源序号不能相同'
+						},
+						res_name:{
+							remote:'同一级别下的资源名称不能相同'
 						}
 					},
 					submitHandler:function(form){
+						var resId = $('input[name="resId"]').val();
+						var url = '';
+						var reqBody = {
+							res_name: $('#res_name').val(),
+							res_pid: $('#res_pid').val(),
+							res_url: $('#res_url').val(),
+							res_type: $('#res_type').val(),
+							res_desc: $('#res_desc').val(),
+							res_order: $('#res_order').val(),
+							res_icon: $('#res_icon').val()
+						}
+						if(resId) {//编辑
+							url = '/admin/sys/res/edit';
+							reqBody.resId = resId
+						}else{
+							url = '/admin/sys/res/add';
+						}
+
 						$.ajax({
 							type: "POST",
-							url:'/admin/sys/res/add',
-							data:{
-								res_name:$('#res_name').val(),
-								res_pid:$('#res_pid').val(),
-								res_url:$('#res_url').val(),
-								res_type:$('#res_type').val(),
-								res_desc:$('#res_desc').val(),
-								res_order:$('#res_order').val(),
-								res_icon:$('#res_icon').val()
-							},
+							url:url,
+							data:reqBody,
 							success: function(data) {
 								if(data.error){
 									//alert(data.error)
@@ -228,7 +318,7 @@
 										title:'系统提示'
 									})
 								}else{
-									window.location.href='/admin/sys/rec'
+									window.location.href='/admin/sys/res'
 								}
 							}
 						})
