--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -252,11 +252,11 @@ input[type="checkbox"] {
   overflow-x: hidden; }
 
 .left-nav i {
-  font-size: 20px;
-  margin-right: 10px;
-  width: 25px;
+  font-size: 14px;
+  margin-right: 8px;
+
   text-align: center;
-  vertical-align: top; }
+  vertical-align: baseline; }
 
 .left-nav ul ul {
   display: none; }
@@ -269,7 +269,9 @@ input[type="checkbox"] {
 
 .left-nav li li {
   padding: 15px 20px 15px 40px;
-  border-bottom: 1px solid #ccc; }
+  border-bottom: 1px solid #ccc;
+}
+
 
 .left-nav li li:before, .left-nav li li.active:after {
   font-family: FontAwesome;
@@ -282,7 +284,6 @@ input[type="checkbox"] {
   display: inline-block;
   speak: none;
   vertical-align: middle;
-  content: '\f0da';
   font-size: 20px;
   margin-right: 10px; }
 
@@ -480,7 +481,7 @@ html, body {
   box-shadow: inset 0 0 1px #4693c8;
   background: #fefefe \9;
   margin-top: 80px;
-  padding: 50px 40px;
+  padding: 30px 30px;
   box-sizing: border-box; }
 
 .login-title {
@@ -559,7 +560,12 @@ html, body {
 #chart {
   padding: 20px; }
 
-.error{
-  font-size: 12px; color: red;
+label.error{
+  font-size: 12px; color: red;line-height: 12px; margin-bottom: 0px;
 }
+
+.modal-header{background: #f2f2f2
+}
+.modal-footer{background: #f2f2f2  }
+
 /*# sourceMappingURL=main.css.map */
