--- a/core/views/admin/include/menu.html
+++ b/core/views/admin/include/menu.html
@@ -1,7 +1,7 @@
 <%
 var peopleId = req.query['peopleId']
 var menus = commonData.menus
-var active = '系统设置'
+var active = '执行分析'
 %>
 
 
@@ -43,4 +43,5 @@ var active = '系统设置'
         <%}
         }%>
     </ul>
+
 </div><!-- left-nav -->
