--- a/core/views/admin/home.html
+++ b/core/views/admin/home.html
@@ -20,18 +20,13 @@
 			<% include ./include/header.html %>
 			<div class="index-container">
 				<% include ./include/menu.html %>
-				<div class="index-search">
-					<div class="search-box">
-						<input type="text" placeholder="模糊查询" /> 
-						<a href="/admin/search/result" class="btn btn-primary">搜索</a>
-					</div>
-					<br />
-					<p class="gray-color">1.支持模糊查询 </p>
-					<p class="gray-color">2.可输入姓名,身份证号,手机号</p>
-				</div>
+				这是首页...
 			</div>
 			<div class="push"></div>
 		</div><!--wrapper -->
 		<% include ./include/footer.html %>
+	<script>
+
+	</script>
 	</body>
 </html>
