--- a/core/views/admin/login.html
+++ b/core/views/admin/login.html
@@ -52,6 +52,7 @@
 							<span class="pull-right"><a href="#">找回密码</a></span>
 						</p>
 						<br>
+						<button style="display: none" type="submit"></button>
 						<a href="#" onclick="submitFun()" class="btn btn-large btn-block orange-btn">登 录</a>
 					</div>
 				</form>
