--- a/core/views/admin/monitor/server.html
+++ b/core/views/admin/monitor/server.html
@@ -30,11 +30,11 @@
 					<div class="box server-list">
 						<div class="interface-box">
 							<div class="server-status"></div>
-							<div class="title">国土资源局</div>
+							<div class="title">法院服务器1</div>
 						</div>
 						<div class="interface-box">
-							<div class="server-status error"></div>
-							<div class="title">国土资源局</div>
+							<div class="server-status"></div>
+							<div class="title">法院服务器2</div>
 						</div>
 					</div>
 					<div class="blue-bg interface-info"><span class="icon-sstatus"></span>代表服务器显示正常      <span class="icon-sstatus-error"></span>代表服务器显示异常</div>
