--- a/core/views/admin/login.html
+++ b/core/views/admin/login.html
@@ -115,7 +115,7 @@
 									title:'系统提示'
 								})
 							}else{
-								window.location.href='/admin/search'
+								window.location.href='/admin/home'
 							}
 						}
 					})
