--- a/core/views/admin/login.html
+++ b/core/views/admin/login.html
@@ -15,6 +15,14 @@
 		<script src="/public/bower_components/jquery-validation/dist/additional-methods.min.js"></script>
 		<script src="/public/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="/public/javascripts/common.js"></script>
+		<style>
+			input[type="text"],
+			input[type="password"],
+			input[type="tel"],
+			input[type="number"],
+			input[type="submit"], input[type="reset"] {
+				padding: 5px 12px;}
+		</style>
 	</head>
 	<body>
 		<div class="header">
